--- a/src/MRubyCS/MRubyCS.csproj
+++ b/src/MRubyCS/MRubyCS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>13</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -14,6 +14,16 @@
 
     <ItemGroup>
       <PackageReference Include="Utf8StringInterpolation" Version="1.3.2" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+        <PackageReference Include="PolySharp" Version="1.15.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+<!--        <PackageReference Include="System.Buffers" Version="4.6.0" />-->
+<!--        <PackageReference Include="System.Memory" Version="4.6.0" />-->
+<!--        <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.6.0" />-->
     </ItemGroup>
 
     <ItemGroup>
