Set IsPackable=true for the internal projs

--- a/src/MRubyCS.SourceGenerator/MRubyCS.SourceGenerator.csproj
+++ b/src/MRubyCS.SourceGenerator/MRubyCS.SourceGenerator.csproj
@@ -11,6 +11,7 @@
         <DevelopmentDependency>true</DevelopmentDependency>
         <IncludeSymbols>false</IncludeSymbols>
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,9 +24,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="$(OutputPath)\$(AssemblyName).dll" 
+        <None Include="$(OutputPath)\$(AssemblyName).dll"
               Pack="true"
               PackagePath="analyzers/dotnet/cs"
               Visible="false" />
-    </ItemGroup>    
+    </ItemGroup>
 </Project>
