--- a/sandbox/MRubyCS.ConsoleApp/MRubyCS.ConsoleApp.csproj
+++ b/sandbox/MRubyCS.ConsoleApp/MRubyCS.ConsoleApp.csproj
@@ -6,6 +6,7 @@
         <LangVersion>13</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>false</IsPackable>
 <!--        <TieredCompilation>false</TieredCompilation>-->
     </PropertyGroup>
 
