--- a/src/MRubyCS.Compiler/MRubyCS.Compiler.csproj
+++ b/src/MRubyCS.Compiler/MRubyCS.Compiler.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RuntimeIdentifiers>osx-arm64</RuntimeIdentifiers>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <NativeLibs Include="runtimes\**\*.dll*" />
+        <NativeLibs Include="runtimes\**\*.dll" />
         <NativeLibs Include="runtimes\**\*.so" />
         <NativeLibs Include="runtimes\**\*.a" />
         <NativeLibs Include="runtimes\**\*.dylib" />
@@ -26,4 +27,26 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+
+    <!-- Copy files for Unity -->
+    <PropertyGroup>
+        <UnityAssetsRoot>$(MSBuildProjectDirectory)\..\MRubyCS.Compiler.Unity\Assets\MRubyCS.Compiler\Runtime</UnityAssetsRoot>
+    </PropertyGroup>
+    <ItemGroup>
+        <UnityAssets Include="**\*.cs" Exclude="**\bin\**\*.*;**\obj\**\*.*" />
+        <UnityAssetsPlugins Include="runtimes\**\*.dll" Exclude="**\bin\**\*.*;**\obj\**\*.*" />
+        <UnityAssetsPlugins Include="runtimes\**\*.so" Exclude="**\bin\**\*.*;**\obj\**\*.*" />
+        <UnityAssetsPlugins Include="runtimes\**\*.a" Exclude="**\bin\**\*.*;**\obj\**\*.*" />
+        <UnityAssetsPlugins Include="runtimes\**\*.dylib" Exclude="**\bin\**\*.*;**\obj\**\*.*" />
+    </ItemGroup>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Copy SourceFiles="@(UnityAssets)"
+              DestinationFiles="$(UnityAssetsRoot)\%(RecursiveDir)%(Filename)%(Extension)"
+              SkipUnchangedFiles="true" />
+        <Copy SourceFiles="@(UnityAssetsPlugins)"
+              DestinationFiles="$(UnityAssetsRoot)\Plugins\%(RecursiveDir)%(Filename)%(Extension)"
+              SkipUnchangedFiles="true" />
+
+    </Target>
+
 </Project>
