--- a/.github/workflows/update-version-number.yaml
+++ b/.github/workflows/update-version-number.yaml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Update package.json ${{ steps.configure.outputs.git-tag }}
         run: |
-          ruby -i -pe 'gsub(/"version"\s*:\s*"([\d\.]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Compiler.Unity/Assets/MRubyCS.Compiler/package.json
+          ruby -i -pe 'gsub(/"version"\s*:\s*"([\w\.-]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Compiler.Unity/Assets/MRubyCS.Compiler/package.json
 
       - name: Check update on git
         id: check_update
