--- a/src/MRubyCS.Serializer/MRubyCS.Serializer.csproj
+++ b/src/MRubyCS.Serializer/MRubyCS.Serializer.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0;netstandard2.1</TargetFrameworks>
         <LangVersion>12</LangVersion>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -14,4 +13,11 @@
       <ProjectReference Include="..\MRubyCS\MRubyCS.csproj" />
     </ItemGroup>
 
+    <!-- Bundle SourceGenerator -->
+    <ItemGroup>
+        <None Include="..\MRubyCS.Serializer.SourceGenerator\bin\$(Configuration)\netstandard2.0\MRubyCS.Serializer.SourceGenerator.dll"
+              PackagePath="analyzers\dotnet\roslyn4.1\cs"
+              Pack="true"
+              Visible="false" />
+    </ItemGroup>
 </Project>
