--- a/src/MRubyCS/MRubyCS.csproj
+++ b/src/MRubyCS/MRubyCS.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>13</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
