--- a/.github/workflows/update-version-number.yaml
+++ b/.github/workflows/update-version-number.yaml
@@ -71,11 +71,16 @@ jobs:
 
       - name: Update Directory.Build.props  ${{ steps.configure.outputs.git-tag }}
         run: |
-          ruby -i -pe 'gsub(%r{(<PackageVersion>)([\w\.-]+)(</PackageVersion>)}, %q{\1${{ steps.configure.outputs.git-tag }}\3})' Directory.Build.props
+          ruby -i -pe 'gsub(%r{(<PackageVersion>)([\w\.-]+)(</PackageVersion>)}, %q{\1${{ steps.configure.outputs.git-tag }}\3})' README.md
 
+      - name: Update README.md  ${{ steps.configure.outputs.git-tag }}
+        run: |
+          ruby -i -pe 'gsub(%r{(https://github.com/hadashiA/VitalRouter.git\?path=/src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Unity#)[\d\.]+}, %q{\1${{ steps.configure.outputs.git-tag }}})' README.m
+          ruby -i -pe 'gsub(%r{(https://github.com/hadashiA/VitalRouter.git\?path=/src/MRubyCS.Unity/Assets/MRubyCS.Serializer.Unity#)[\d\.]+}, %q{\1${{ steps.configure.outputs.git-tag }}})' README.m
       - name: Update package.json ${{ steps.configure.outputs.git-tag }}
         run: |
-          ruby -i -pe 'gsub(/"version"\s*:\s*"([\w\.-]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Compiler.Unity/Assets/MRubyCS.Compiler/package.json
+          ruby -i -pe 'gsub(/"version"\s*:\s*"([\w\.-]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Unity/package.json
+          ruby -i -pe 'gsub(/"version"\s*:\s*"([\w\.-]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Unity/Assets/MRubyCS.Serializer.Unity/package.json
 
       - name: Check update on git
         id: check_update
