--- a/.github/workflows/update-version-number.yaml
+++ b/.github/workflows/update-version-number.yaml
@@ -76,7 +76,7 @@ jobs:
       - name: Update README.md  ${{ steps.configure.outputs.git-tag }}
         run: |
           ruby -i -pe 'gsub(%r{(https://github.com/hadashiA/VitalRouter.git\?path=/src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Unity#)[\d\.]+}, %q{\1${{ steps.configure.outputs.git-tag }}})' README.md
-          ruby -i -pe 'gsub(%r{(https://github.com/hadashiA/VitalRouter.git\?path=/src/MRubyCS.Unity/Assets/MRubyCS.Serializer.Unity#)[\d\.]+}, %q{\1${{ steps.configure.outputs.git-tag }}})' README.m
+          ruby -i -pe 'gsub(%r{(https://github.com/hadashiA/VitalRouter.git\?path=/src/MRubyCS.Unity/Assets/MRubyCS.Serializer.Unity#)[\d\.]+}, %q{\1${{ steps.configure.outputs.git-tag }}})' README.md
       - name: Update package.json ${{ steps.configure.outputs.git-tag }}
         run: |
           ruby -i -pe 'gsub(/"version"\s*:\s*"([\w\.-]+)"/, %q{"version": "${{ steps.configure.outputs.git-tag }}"})' src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Unity/package.json
