--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ StyleCopReport.xml
 *_p.c
 *_h.h
 *.ilk
-*.meta
+#*.meta
 *.obj
 *.iobj
 *.pch
@@ -490,7 +490,7 @@ src/MRubyCS.Unity/*.csproj
 src/MRubyCS.Unity/*.sln
 src/MRubyCS.Unity/UserSettings
 !src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Unity
-!src/MRubyCS.Unity/Assets/MRubyCS.Compiler.Serializer
+!src/MRubyCS.Unity/Assets/MRubyCS.Serializer.Unity
 
 src/MRubyCS.Unity/Assets/Packages/*
 
