--- a/.github/workflows/update-version-number.yaml
+++ b/.github/workflows/update-version-number.yaml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Update Directory.Build.props  ${{ steps.configure.outputs.git-tag }}
         run: |
-          ruby -i -pe 'gsub(%r{(<PackageVersion>)([\w\.-]+)(</PackageVersion>)}, %q{\1${{ steps.configure.outputs.git-tag }}\3})' README.md
+          ruby -i -pe 'gsub(%r{(<PackageVersion>)([\w\.-]+)(</PackageVersion>)}, %q{\1${{ steps.configure.outputs.git-tag }}\3})' Directory.Build.props
 
       - name: Update README.md  ${{ steps.configure.outputs.git-tag }}
         run: |
