--- a/src/MRubyCS.Serializer/MRubyCS.Serializer.csproj
+++ b/src/MRubyCS.Serializer/MRubyCS.Serializer.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0;netstandard2.1</TargetFrameworks>
         <LangVersion>12</LangVersion>
         <Nullable>enable</Nullable>
         <Description>A plugin for MRubyCS that enables conversion between C# and mruby objects.
