--- a/src/MRubyCS.Compiler.Cli/MRubyCS.Compiler.Cli.csproj
+++ b/src/MRubyCS.Compiler.Cli/MRubyCS.Compiler.Cli.csproj
@@ -15,6 +15,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="PrettyPrompt" Version="4.1.1" />
       <PackageReference Include="System.IO.Pipelines" Version="10.0.1" />
     </ItemGroup>
 
