Fix compiler warnings

--- a/src/MRubyCS.SourceGenerator/MRubyCS.SourceGenerator.csproj
+++ b/src/MRubyCS.SourceGenerator/MRubyCS.SourceGenerator.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <LangVersion>13</LangVersion>
         <IsRoslynComponent>true</IsRoslynComponent>
+        <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <AnalyzerLanguage>cs</AnalyzerLanguage>
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <DevelopmentDependency>true</DevelopmentDependency>
