--- a/.github/workflows/build-mruby-compiler.linux.yaml
+++ b/.github/workflows/build-mruby-compiler.linux.yaml
@@ -31,6 +31,8 @@ jobs:
     - name: Build Linux
       working-directory: ${{ env.MRUBY_DIR }}
       run: |
+        rake clean
+        rm -fr ./build
         MRUBY_CONFIG=${{ env.CONFIG_DIR }}/build_config.linux.rb rake
         
     - uses: actions/upload-artifact@v4
