--- a/.github/workflows/build-mruby-compiler.macOS.yaml
+++ b/.github/workflows/build-mruby-compiler.macOS.yaml
@@ -24,6 +24,8 @@ jobs:
       working-directory: ${{ env.MRUBY_DIR }}
       shell: bash
       run: |
+        rake clean
+        rm -fr ./build
         MRUBY_CONFIG=${{ env.CONFIG_DIR }}/build_config.macOS.rb rake
         
     - uses: actions/upload-artifact@v4
