--- a/.github/workflows/build-mruby-compiler.windows.yaml
+++ b/.github/workflows/build-mruby-compiler.windows.yaml
@@ -34,6 +34,8 @@ jobs:
       working-directory: ${{ env.MRUBY_DIR }}
       shell: bash
       run: |
+        rake clean
+        rm -fr ./build        
         MRUBY_CONFIG=${GITHUB_WORKSPACE}/src/MRubyCS.Compiler/build_config.windows.rb rake
         
     - uses: actions/upload-artifact@v4
