--- a/sandbox/MRubyCS.Benchmark/MRubyCS.Benchmark.csproj
+++ b/sandbox/MRubyCS.Benchmark/MRubyCS.Benchmark.csproj
@@ -2,11 +2,11 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <RootNamespace>MRubyD.Benchmark</RootNamespace>
+        <RootNamespace>MRubyCS.Benchmark</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,5 +22,15 @@
     <ItemGroup>
       <ProjectReference Include="..\..\src\MRubyCS.Compiler\MRubyCS.Compiler.csproj" />
       <ProjectReference Include="..\..\src\MRubyCS\MRubyCS.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <NativeLibs Include="runtimes\**\*.dll" />
+        <NativeLibs Include="runtimes\**\*.so" />
+        <NativeLibs Include="runtimes\**\*.dylib" />
+        <None Include="@(NativeLibs)">
+            <PackageCopyToOutput>true</PackageCopyToOutput>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
