--- a/.github/workflows/build-mruby-compiler.linux.yaml
+++ b/.github/workflows/build-mruby-compiler.linux.yaml
@@ -7,6 +7,8 @@ on:
 env:
   MRUBY_DIR: ${{ github.workspace }}/src/MRubyCS.Compiler/mruby
   CONFIG_DIR: ${{ github.workspace }}/src/MRubyCS.Compiler
+  BENCHMARK_MRUBY_DIR: ${{ github.workspace }}/sandbox/MRubyCS.Benchmark/mruby
+  BENCHMARK_CONFIG_DIR: ${{ github.workspace }}/sandbox/MRubyCS.Benchmark
   
 jobs:
   build-linux:
@@ -28,16 +30,27 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gcc-aarch64-linux-gnu
 
-    - name: Build Linux
+    - name: Build mruby compiler (Linux)
       working-directory: ${{ env.MRUBY_DIR }}
       run: |
-        rake clean
-        rm -fr ./build
         MRUBY_CONFIG=${{ env.CONFIG_DIR }}/build_config.linux.rb rake
-        
+
     - uses: actions/upload-artifact@v4
       id: upload-build
       with:
         name: linux-build
         path: ${{ env.MRUBY_DIR }}/build
+
+    - name: Build mruby for benchmark (Linux)
+      working-directory: ${{ env.BENCHMARK_MRUBY_DIR }}
+      run: |
+        rake clean
+        rm -fr ./build
+        MRUBY_CONFIG=${{ env.BENCHMARK_CONFIG_DIR }}/build_config.linux.rb rake
+
+    - uses: actions/upload-artifact@v4
+      id: upload-benchmark-build
+      with:
+        name: linux-benchmark-build
+        path: ${{ env.BENCHMARK_MRUBY_DIR }}/build
 
