--- a/.github/workflows/build-mruby-compiler.windows.yaml
+++ b/.github/workflows/build-mruby-compiler.windows.yaml
@@ -6,6 +6,8 @@ on:
 env:
   MRUBY_DIR: ${{ github.workspace }}\src/MRubyCS.Compiler\mruby
   CONFIG_DIR: ${{ github.workspace }}\src/MRubyCS.Compiler
+  BENCHMARK_MRUBY_DIR: ${{ github.workspace }}\sandbox/MRubyCS.Benchmark\mruby
+  BENCHMARK_CONFIG_DIR: ${{ github.workspace }}\sandbox/MRubyCS.Benchmark
     
 jobs:
   build-windows:
@@ -43,3 +45,17 @@ jobs:
       with:
         name: windows-build
         path: ${{ env.MRUBY_DIR }}/build
+
+    - name: Build mruby for benchmark (Windows)
+      working-directory: ${{ env.BENCHMARK_MRUBY_DIR }}
+      shell: bash
+      run: |
+        rake clean
+        rm -fr ./build
+        MRUBY_CONFIG=${GITHUB_WORKSPACE}/sandbox/MRubyCS.Benchmark/build_config.windows.rb rake
+
+    - uses: actions/upload-artifact@v4
+      id: upload-benchmark-build
+      with:
+        name: windows-benchmark-build
+        path: ${{ env.BENCHMARK_MRUBY_DIR }}/build
